<resources>
    <string name="app_name">Dices v1.08</string>
    <string name="start">Start</string>
    <string name="viewprofiles">Profiles</string>
    <string name="quit">Quit</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_profile_activity">Profiles</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_with_selected_profile">Start with selected profile</string>
    <string name="go_back">Go Back</string>
    <string name="add_new">Add New</string>
    <string name="default_profile">Default Profile</string>
    <string name="default_2">Default 2</string>
    <string name="default_3">Default 3</string>
    <string name="defaulttext">DefaultText</string>
    <string name="textview">DefaultText2</string>
    <string name="defaulttext3">DefaultText3</string>

    <string name="title_activity_game">Dices</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="roll">Roll</string>
    <string name="number_of_dices">1</string>
    <string name="button">Button</string>
    <string name="plusDiceBtn">+</string>
    <string name="minusDiceBtn">-</string>
    <string name="dice1_value"></string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="clear_all">Clear All</string>
    <string name="_2019">Приложение было разработано Антуфьевым Даниилом, как курсовая работа по дицсиплине Проекты 2019г</string>
</resources>
